[package]
name = "cap-reformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
futures-lite = "2.3.0"

argh = "0.1.12"
uuid = "1.8.0"
snafu = { version = "0.8.3" }
binrw = "0.14.0"
bytemuck = { version = "1.7.0", features = ["derive"] }

btleplug = "0.11.5"
tokio-serial = "5.4.4"
tokio-modbus = "0.13.1"

ctrlc = "3.4.4"
